# MrPain_T

./: README.md
IAL/ial_2019_du1/: c206-test.c
IAL/test/: proj2.tar
IAN/: Makefile  hello_world  ian-proj1  ian-proj1.c
IAN/ian/: Makefile
IAN/proj2/: heslo  why.txt
IAN/proj3/: my.stp
ICP/MHD/: MHD.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
ICP/MHD2/: bus.txt  line.txt  stop.txt  street.txt  traffic.txt
ICP/build-MHD-Debug/: MHD  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
ICP/proj1/: .Coordinate.cpp.swp  Coordinate.cpp  Coordinate.h  Stop.cpp  Stop.h  Street.h
IJA/IJA/: Homework2Test.java
IJA/src/: .MyCoordinate.java.swp  .MyStop.java.swp  .MyStreet.java.swp  .MyStreetMap.java.swp  .TestHomework1.java.swp  MyCoordinate.java  MyStop.java  MyStreet.java  MyStreetMap.java
ILI/: .xdanca01-fit-ili.sh.swo  xdanca01-fit-ili.sh  xdanca01-fit-ili.txt
IMS/IMS/: Makefile  compile_flags.txt  model  model.cc  model2  simlib_skript.sh
IPK/: IPK_proj1.py  Makefile  client  client.sh  queries.txt  readme.md  test.py
IPK/proj1/: client.sh  queries.txt
IPK/proj2/:    .ipk-sniffer.c.swp  Makefile  README.md  ipk-sniffer  ipk-sniffer.c  ipk-sniffer2.c  xdanca01.tar  xdanca01.tar.xz
IPK/src/: .IPK_proj1.py.swp  IPK_proj1.py
IPP/: .interpret.py.swp  .parser.php.swp  .test.php.swp  .testovaci.txt.swp  .zadani.swp  interpret.py  parse.php  parser.php  parser2.php  read_out.txt  readme.md  readme2.md  simple_tag.xml  template.html  tesst.xml  test.php  testovaci.txt  write_out.txt  zadani
IPP/parse-only/: .simple_tag.src.swp  .write_test.out.swp
IPP/practice/: .test.php.swp  cccc.html  cccc.htmle  int.html  int2_only.html  int_only.html  new.html  output.html  output6.html  parse.html  sadsad.html  teeeet.html  template.html  test.php
IPP/test_php_files/: HTML_header.html
IPS/: pgrep.c
ISA/: Makefile  README.md  dns  manual.docx  xdanca01.tar
ITS/: README.md  admin_orders.feature  admin_products.feature  environment.py  nakup.feature  ucet.feature
ITW/: style.css  style.css~  xdanca01_2.html  xdanca01_2.html~
MUNI/PA010/proj1/mine2/pa010_projects/: CMakeLists.txt
MUNI/PA010/proj1/mine2/pa010_projects/subdivision/: CMakeLists.txt  application.cpp  application.hpp  application_details.cpp  main.cpp  workspace.code-workspace
MUNI/PA010/proj1/mine2/pa010_projects/subdivision/shaders/: main.vert
MUNI/PA010/proj1/mine2/pa010_projects/subdivision/tests/: CMakeLists.txt  tests.cpp
MUNI/PA010/proj1/mine2/pa010_projects/subdivision/tests/data/: T-Shape  Tetrahedton  Torus
MUNI/PA010/proj2/noise/: CMakeLists.txt  imgui.ini
MUNI/PA010/proj2/noise/framework/core/geometries/: cube.inl  sphere.inl  teapot.inl  teapot_patch.inl  torus.inl
MUNI/PA010/proj2/noise/framework/core/include/geometry/: capsule.hpp  cube.hpp  cylinder.hpp  geometry_base.hpp  sphere.hpp  torus.hpp
MUNI/PA010/proj2/noise/framework/core/include/opengl/: opengl_object.hpp  program.hpp  program_map.hpp  ubo.hpp
MUNI/PA010/proj2/noise/framework/core/include/scene/: advanced_scene_object.hpp  material_ubo.hpp  scene_object.hpp
MUNI/PA010/proj2/noise/framework/core/include/utils/: utils.hpp
MUNI/PA010/proj2/noise/framework/core/shaders/: display_texture_330.frag  full_screen_quad.vert
MUNI/PA010/proj2/noise/framework/core/src/: iapplication.cpp
MUNI/PA010/proj2/noise/framework/core/src/geometry/: geometry_base.cpp
MUNI/PA010/proj2/noise/framework/core/src/opengl/: program_map.cpp  texture.cpp
MUNI/PA010/proj2/noise/framework/core/src/utils/: utils.cpp
MUNI/PA010/proj2/noise/framework/opengl_3_3/: CMakeLists.txt
MUNI/PA010/proj2/noise/framework/opengl_3_3/include/: geometry_3_3.hpp  texture_3_3.hpp
MUNI/PA010/proj2/noise/framework/opengl_3_3/src/: texture_3_3.cpp
MUNI/PA010/proj2/noise/pa010_projects/: CMakeLists.txt
MUNI/PA010/proj2/noise/pa010_projects/noise/: CMakeLists.txt  application.cpp  application.hpp
MUNI/PA010/proj2/noise/pa010_projects/noise/tests/: CMakeLists.txt  tests.cpp
MUNI/PA010/proj2/noise/pa010_projects/noise/tests/data/: 1. Plain noise.0.txt  1. Plain noise.1.txt  1. Plain noise.2.txt  2. Fractal sum.0.txt  2. Fractal sum.1.txt  2. Fractal sum.2.txt  3. Turbulence.0.txt  3. Turbulence.1.txt  3. Turbulence.2.txt  4. Marble.0.txt  4. Marble.1.txt  4. Marble.2.txt
MUNI/PA010/proj2/tes/framework/core/: CMakeLists.txt
MUNI/PA010/proj2/tes/framework/core/geometries/: capsule.inl  cylinder.inl
MUNI/PA010/proj2/tes/framework/core/include/: camera.hpp  color.hpp  default_application.hpp  iapplication.hpp  manager.hpp
MUNI/PA010/proj2/tes/framework/core/include/geometry/: geometry.hpp  teapot.hpp
MUNI/PA010/proj2/tes/framework/core/include/opengl/: shader.hpp  texture.hpp
MUNI/PA010/proj2/tes/framework/core/include/scene/: camera_ubo.hpp  light_ubo.hpp
MUNI/PA010/proj2/tes/framework/core/include/utils/: configuration.hpp  utils.hpp
MUNI/PA010/proj2/tes/framework/core/shaders/: gbuffer.frag  lit.frag  object.vert  object_330.vert  unlit.frag
MUNI/PA010/proj2/tes/framework/core/src/: camera.cpp  default_application.cpp  manager.cpp
MUNI/PA010/proj2/tes/framework/core/src/geometry/: geometry.cpp
MUNI/PA010/proj2/tes/framework/core/src/opengl/: shader.cpp
MUNI/PA010/proj2/tes/framework/core/src/utils/: utils.cpp
MUNI/PV227/framework/framework/geometry/: CMakeLists.txt  depends.cmake
MUNI/PV227/framework/framework/geometry/geometries/: capsule.inl  cube.inl  torus.inl
MUNI/PV227/framework/framework/geometry/include/: cube.hpp  cylinder.hpp  geometry.hpp
MUNI/PV227/framework/framework/geometry/src/: geometry_base.cpp
MUNI/PV227/framework/framework/glm/: CMakeLists.txt  depends.cmake
MUNI/PV227/framework/framework/gui/: CMakeLists.txt
MUNI/PV227/framework/framework/gui/include/: camera.h  gui_application.h  gui_manager.h
MUNI/PV227/framework/framework/gui/src/: gui_manager.cpp
bachelor/: .input.swp  .lists.txt.swp  .parser.py.swp  .replacer.php.swp  .template.txt.swp  cmd_options.sh  input  lists.txt  parser.php  parser.py  poznamky  replacer.php  some_script.sh
pro_terku/: do_nuly.sh  dve_cisla.sh
(+1032 files in other folders)
