# ----------------------------------------------------------------------------
# This is the configuration file for 'Subdivision' project.
# ----------------------------------------------------------------------------

# Sets the name of the project, and stores it in the variable PROJECT_NAME.
project(pa010_subdivision CXX)

# Adds a new executable target.
add_executable(${PROJECT_NAME} application.hpp application.cpp application_details.cpp main.cpp)

# Sets the build properties.
# CXX_STANDARD - the C++ standard whose features are requested.
# CXX_EXTENSIONS - no compiler specific extensions are requested.
set_target_properties(${PROJECT_NAME} PROPERTIES 
    CXX_STANDARD 20             
    CXX_EXTENSIONS OFF
)

# Include test to the project
add_subdirectory(tests)

# Specifies libraries or flags to use when linking a given target and/or its dependents.
target_link_libraries(${PROJECT_NAME}
  PRIVATE    
    FRAMEWORK_CORE FRAMEWORK_OPENGL_3_3
)

file(
    GENERATE
    OUTPUT "$<TARGET_FILE_DIR:${PROJECT_NAME}>/configuration.toml"
    CONTENT "framework_shaders = \"${CMAKE_SOURCE_DIR}/framework/core/shaders\"
shaders = \"${CMAKE_CURRENT_SOURCE_DIR}/shaders\"
"
)
